Worked more on getting spacing correct for the Resume timeline feature - Removed vestigial code

--- a/project-wesley-wei-client/src/components/pages/resume/styles/Resume.css
+++ b/project-wesley-wei-client/src/components/pages/resume/styles/Resume.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin: 0 2rem 0 2rem;
+    overflow-x: hidden;
 }
 
 .resume-menu-container {
@@ -54,18 +55,31 @@
     height: 55vh;
     margin: 1rem;
     overflow-y: auto;
+    padding: 2rem;
 }
 
 /* Start: Resume timeline */
+/* .resume-content-container::before {
+    content: '';
+    position: relative;
+    height: 100vh;
+    width: 5px;
+    top: 0;
+    left: calc(47.5% + 1rem);
+    background-color: rgba(150, 150, 150, 0.3);
+    float: left;
+    z-index: -1;
+} */
+
 .resume-timeline-element {
     /* margin: 1rem; */
-    /* padding: 0.5rem; */
+    padding: 1rem;
     background-color: rgba(150, 150, 150, 0.3);
 }
 
 .resume-timeline-element.left {
     position: relative;
-    width: 45%;
+    width: 40%;
 }
 
 .resume-timeline-element.left::after {
@@ -73,12 +87,18 @@
     height: calc(100% + 20px);
     width: 5px;
     position: absolute;
-    right: calc(-10% - 5px);
+    /* right: calc(-10% - 5px); */
+    right: calc((0% - ((100% * 7.5) / 40)) + (5px + 0.6rem + 1.5px));
     top: 0;
-    background-color: rgba(150, 150, 150, 0.3);;
+    background-color: rgba(150, 150, 150, 0.3);
 }
 
-/* Right side resume timeline circle */
+.resume-timeline-element
+> .resume-timeline-heading {
+    margin-top: 0;
+}
+
+/* Left side resume timeline circle */
 .resume-timeline-element.left
 > .resume-timeline-heading::before {
     content: '';
@@ -88,7 +108,11 @@
     background-color: white;
     border: 3px solid rgba(150, 150, 150, 0.3);
     position: absolute;
-    right: calc(-10% - 13px);
+    /* right: calc(-15.5%); */
+    /* 100% of resume timeline element and 7.5% offset from the vertical line
+    divided by 40 which is the resume timeline width to get positioning of
+    timeline circle. The rest is the circle size offset */
+    right: calc(0% - ((100% * 7.5) / 40) + (0.6rem - 1.5px));
     z-index: 1;
 }
 
@@ -102,7 +126,7 @@
 .resume-timeline-element.right {
     position: relative;
     left: 55%;
-    width: 45%;
+    width: 40%;
 }
 
 .resume-timeline-element.right::before {
@@ -110,8 +134,9 @@
     height: calc(100% + 20px);
     width: 5px;
     position: absolute;
-    left: calc(-10% - 5px);
-    background-color: rgba(150, 150, 150, 0.3);;
+    /* left: calc(-10% - 5px); */
+    left: calc((0% - ((100% * 7.5) / 40)) + (10px + 0.7rem + 1.5px));
+    background-color: rgba(150, 150, 150, 0.3);
 }
 
 /* Right side resume timeline circle */
@@ -124,7 +149,8 @@
     background-color: white;
     border: 3px solid rgba(150, 150, 150, 0.3);
     position: absolute;
-    left: calc(-10% - 14px);
+    /* right: calc(100%); */
+    left: calc(0% - ((100% * 7.5) / 40) + (0.75rem + 1.5px));
     z-index: 1;
 }
 
@@ -151,6 +177,7 @@
     .resume-categories ul {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .resume-menu-container
@@ -184,16 +211,18 @@
 
     .resume-content-container {
         border-width: 1rem;
+        margin: 0;
     }
 }
 
 @media screen and (min-width: 992px)  {
     .resume-menu-container {
-        width: 50%;
+        width: 40%;
     }
 
     .resume-content-container {
-        width: 50%;
+        width: 60%;
+        margin: 0;
     }
 }
 
